# CorporateIntelligence

./: .replit  app.py  auth.py  chat.py  config.py  document_processor.py  download_model.py  extensions.py  gitignore  gunicorn.conf.py  llm_integration.py  main.py  migrations.py  models.py  openai_integration.py  pyproject.toml  rag_engine.py  replit.nix  run.sh  run.sh.bak  start_server.py  vector_store.py  workflow.config  workflow.sh
attached_assets/: Pasted--2025-04-03-15-12-23-0000-621-ERROR-Error-handling-request-Traceback-most-recent-call-last--1743693327509.txt  Pasted--2025-04-03-19-20-12-0000-991-ERROR-Exception-in-worker-process-Traceback-most-recent-call-la-1743708091847.txt  Pasted--AI--1743679220411.txt  Pasted-2025-04-03-15-07-11-0000-253-CRITICAL-WORKER-TIMEOUT-pid-382-2025-04-03-15-07-11-0000-38-1743692893900.txt  content-1743679298248.md  content-1743679327411.md  content-1743696926724.md  content-1743697037222.md
static/css/: custom.css
static/js/: chat.js  common.js  dashboard.js  documents.js
templates/: admin.html  chat.html  dashboard.html  documents.html  layout.html  login.html  register.html
uploads/: 1_Soprov_letter.txt  2_IS.txt  2_Test_dogovora.txt  2_docx  2_pdf  2_txt
vector_db/: chroma.sqlite3  user_2_index  user_2_mapping.json
